--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -3,13 +3,18 @@
 
 <div class="row">
   <div class="col">
-  <shared-search-box  placeholder="Buscar por capital" (onValue)="searchByCapital($event)"></shared-search-box>
+    <!-- (onValue)="searchByCapital($event)" Sirve para cuando se presiona enter y queremos que busque -->
+  <shared-search-box
+    placeholder="Buscar por capital"
+    (onDebounce)="searchByCapital($event)"
+  ></shared-search-box>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
     <hr>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-table [countries]="capitals" [name]="nameCapital"></countries-table>
   </div>
 </div>
