--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,8 +2,14 @@
 <hr>
 
 <div class="row">
-  <div class="col">
-  <shared-search-box  placeholder="Buscar por región" (onValue)="searchByRegion($event)"></shared-search-box>
+  <div class="col text-center">
+    <button
+      *ngFor="let region of regionsTypes"
+      class="btn mx-2"
+      [ngClass]="{'btn-outline-primary': selectedRegion == region}"
+      (click)="searchByRegion(region)">
+      {{region}}
+    </button>
   </div>
 </div>
 
