--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,1 +1,7 @@
-<input type="text" [placeholder]="placeholder" class="form-control" (keyup.enter)="emitValue(txtInput.value)" #txtInput>
+<!-- (keyup.enter)="emitValue(txtInput.value)" Sirve para usarlo para que haga la busqueda cuando se oprima enter -->
+<input
+type="text"
+[placeholder]="placeholder"
+class="form-control"
+(keyup)="onKeyPress(txtInput.value)"
+  #txtInput>
