--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -7,6 +7,7 @@
   <shared-search-box
     placeholder="Buscar por capital"
     (onDebounce)="searchByCapital($event)"
+    [initialValue]="initialValue"
   ></shared-search-box>
   </div>
 </div>
