--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -3,13 +3,18 @@
 
 <div class="row">
   <div class="col">
-  <shared-search-box  placeholder="Buscar por país" (onValue)="searchByCountry($event)"></shared-search-box>
+  <shared-search-box
+    placeholder="Buscar por país"
+    (onDebounce)="searchByCountry($event)"
+    [initialValue]="initialValue"
+  ></shared-search-box>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
     <hr>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-table [countries]="countries" [name]="nameCountry"></countries-table>
   </div>
 </div>
